# truceprotocol

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  FAQ.md  GOVERNANCE.md  README.md  SECURITY.md
.github/workflows/: ci.yml
benchmarks/: README.md  evaluate.py  generate_benchmark.py
docs/: INTEGRATION_GUIDE.md  WHY_TATF.md
examples/: README.md
spec/v0.1/: 00-introduction.md  01-scoring-model.md  02-behavioral-baselines.md  03-anomaly-detection.md  04-trust-attestation.md  05-adversarial-testing.md  06-market-stress.md
truce-py/: .gitignore  LICENSE  README.md  pyproject.toml
truce-py/tests/: test_attestation.py  test_avx.py  test_scorer.py
truce-py/truce/: __init__.py  attestation.py  avx.py  models.py  scorer.py
